--- a/index.html
+++ b/index.html
@@ -3,75 +3,10 @@
 	<head>
 		<title>Lox Game Studio</title>
 		<meta charset="utf-16"/>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-16">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="../general/favicon.ico" type="image/x-icon"/>
-		<link href="../general/css/bootstrap.min.css" rel="stylesheet">
-		<link href="../general/css/style.css" rel="stylesheet">
-		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css'>
-		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/0.8.2/css/flag-icon.min.css'>
 	</head>
 	<body>
-		<div class="loader" id="lxloader"><div class="loader-container"></div><img class="loader-img" src="../general/img/loxx.png"/><div class="lds-default"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
-		<div class="site-container" id="isite-container">
-			<header>
-				<div class="menu">
-					<ul>
-						<li><img border="0" onclick="location.href = '..#';" src="../general/img/loxgamestudio.png"/></li>
-						<li><a href="https://www.lgamestudio.com" target="_blank" class="loxtokens" ltoken="backtolox">&lt; Lox Game Studio</a></li>
-						<li><a href="https://discord.gg/nJdmnK6" target="_blank" class="loxtokens" ltoken="joinsupportg">jsg</a></li>
-					</ul>
-				</div>
-				<select class="selectpicker lpicker" id="loxlanguagesystem-picker" data-style="btn-loxpicker" data-width="fit">
-						<option class="loxlanguagesystem-pickeritem" loxlang="en" data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
-						<option class="loxlanguagesystem-pickeritem" loxlang="tr" data-content='<span class="flag-icon flag-icon-tr"></span> Türkçe'>Turkish</option>
-				</select>
-			</header>
-			<div class="container-fluid">
-				<ul class="nav nav-tabs unselectable">
-					<li class="active">
-						<a  href="#1" data-toggle="tab" class="loxtokens" ltoken="tab_wi">wi</a>
-					</li>
-					<li>
-						<a href="#2" data-toggle="tab" class="loxtokens" ltoken="tab_htsu">htsu</a>
-					</li>
-					<li>
-						<a href="#3" data-toggle="tab" class="loxtokens" ltoken="tab_cmds">cmds</a>
-					</li>
-				</ul>
-				<div class="tab-content ">
-					<div class="tab-pane active lox-tabpanel" id="1">
-						<h3 class="loxtokens" ltoken="test">Test1</h3>
-						<h3 class="loxtokens" ltoken="test">Test1</h3>
-						<h3 class="loxtokens" ltoken="test">Test1</h3>
-					</div>
-					<div class="tab-pane lox-tabpanel" id="2">
-						<h3>Test2</h3>
-					</div>
-					<div class="tab-pane lox-tabpanel" id="3">
-						<h3>Test3</h3>
-					</div>
-				</div>
-			</div>
-			<footer>
-				<div class="footer" id="ifooter">
-					<p class="copyright loxtokens unselectable" ltoken="copyright">Copyright &copy; 2018 - Lox Game Studio.</p>
-				</div>
-			</footer>
-		</div>
-		
-		<!-- Placed at the end of the document so the pages load faster -->
-		<script type="text/javascript" src="../general/scripts/jquery.min.js"></script>
-		<script type="text/javascript" src="../general/scripts/bootstrap.min.js"></script>
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/js/bootstrap-select.min.js'></script>
-		<script >$(function () {
-				$('.selectpicker').selectpicker();
-			});
-		</script>
-		<script type="text/javascript" src="../general/scripts/loxcookiemanager.js"></script>
-		<script type="text/javascript" src="../general/scripts/urlparameters.js"></script>
-		<script type="text/javascript" src="./js/lox_languages.js"></script>
-		<script type="text/javascript" src="../general/scripts/loxlanguagecore.js"></script>
-		<script type="text/javascript" src="../general/scripts/main.js"></script>
+		<h3>You entered a wrong or missing URL. Please check the URL and try again.</h3>
+		</br>
+		<h2>Did you mean <a href="https://support.lgamestudio.com/bots/492021132938182658">https://support.lgamestudio.com/bots/492021132938182658</a></h2>
 	</body>
 </html>
