--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -10,10 +10,10 @@
 		<meta name="keywords" content="Lox Security Bot, Lox Game Studio, Bot, Discord Bot, bot, discord bot, lox bot, Lox Bot, Lox Discord Bots, lox discord bots">
 		<meta property="og:title" content="Lox Game Studio" />
 		<meta property="og:description" content="Need help? We are looking forward to helping you." />
-		<meta property="og:image" content="https://support.lgamestudio.com/static/loxbotpages.png" />
+		<meta property="og:image" content="https://static.lgamestudio.com/loxbotpages.png" />
 		<meta property="og:url" content="https://support.lgamestudio.com/bots/492021132938182658" />
 
-		<link rel="icon" href="../general/favicon.ico" type="image/x-icon"/>
+		<link rel="icon" href="https://static.lgamestudio.com/general/favicon.ico" type="image/x-icon"/>
 		<link href="../general/css/bootstrap.min.css" rel="stylesheet">
 		<link href="../general/css/style.css" rel="stylesheet">
 		<link href="./style/custom.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 			<header>
 				<div class="menu">
 					<ul>
-						<li class=""><img border="0" onclick="location.href = 'https://www.lgamestudio.com';" src="../general/img/loxgamestudio.png"/></li>
+						<li class=""><img border="0" onclick="location.href = 'https://www.lgamestudio.com';" src="https://static.lgamestudio.com/general/img/loxgamestudio.png"/></li>
 						<li class="col-lg-2  col-xs-2"><a href="https://www.lgamestudio.com" target="_blank" class="loxtokens" ltoken="backtolox">&lt; Lox Game Studio</a></li>
 						<li class="col-lg-2 col-xs-2"><a href="https://discord.gg/nJdmnK6" target="_blank" class="loxtokens" ltoken="joinsupportg">jsg</a></li>
 					</ul>
