--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -21,7 +21,7 @@
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/0.8.2/css/flag-icon.min.css'>
 	</head>
 	<body>
-		<div class="loader" id="lxloader"><div class="loader-container"></div><img class="loader-img" src="../general/img/loxx.png"/><div class="lds-default"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
+		<div class="loader" id="lxloader"><div class="loader-container"></div><img class="loader-img" src="https://static.lgamestudio.com/general/img/loxx.png"/><div class="lds-default"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
 		<div class="lnotifier-container" id="ilnotifier-container"><div class="lnotifier" id="ilnotifier"><h1 class="title" id="lxititle"></h1></br><p class="message" id="lximessage"></p></br><div class="lbuttons"><button class="lbtn lbtnCancel" id="ilbtn-cancel"></button><button class="lbtn lbtnOk" id="ilbtn-ok"></button></div></div></div>
 		<div class="site-container" id="isite-container">
 			<header>
