--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -14,8 +14,8 @@
 		<meta property="og:url" content="https://support.lgamestudio.com/bots/492021132938182658" />
 
 		<link rel="icon" href="https://static.lgamestudio.com/general/favicon.ico" type="image/x-icon"/>
-		<link href="../general/css/bootstrap.min.css" rel="stylesheet">
-		<link href="../general/css/style.css" rel="stylesheet">
+		<link href="https://static.lgamestudio.com/general/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://static.lgamestudio.com/general/css/style.css" rel="stylesheet">
 		<link href="./style/custom.css" rel="stylesheet">
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/0.8.2/css/flag-icon.min.css'>
@@ -160,21 +160,21 @@
 		</div>
 		
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script type="text/javascript" src="../general/scripts/jquery.min.js"></script>
-		<script type="text/javascript" src="../general/scripts/bootstrap.min.js"></script>
-		<script type="text/javascript" src="../general/scripts/browserdetector.js"></script>
+		<script type="text/javascript" src="https://static.lgamestudio.com/general/scripts/jquery.min.js"></script>
+		<script type="text/javascript" src="https://static.lgamestudio.com/general/scripts/bootstrap.min.js"></script>
+		<script type="text/javascript" src="https://static.lgamestudio.com/general/scripts/browserdetector.js"></script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/js/bootstrap-select.min.js'></script>
 		<script >$(function () {
 				if (!isEdge)
 					$('.selectpicker').selectpicker();
 			});
 		</script>
-		<script type="text/javascript" src="../general/scripts/loxcookiemanager.js"></script>
-		<script type="text/javascript" src="../general/scripts/urlparameters.js"></script>
+		<script type="text/javascript" src="https://static.lgamestudio.com/general/scripts/loxcookiemanager.js"></script>
+		<script type="text/javascript" src="https://static.lgamestudio.com/general/scripts/urlparameters.js"></script>
 		<script type="text/javascript" src="./js/lox_languages.js"></script>
-		<script type="text/javascript" src="../general/scripts/loxlanguagecore.js"></script>
-		<script type="text/javascript" src="../general/scripts/loxmessagebox.js"></script>
-		<script type="text/javascript" src="../general/scripts/main.js"></script>
+		<script type="text/javascript" src="https://static.lgamestudio.com/general/scripts/loxlanguagecore.js"></script>
+		<script type="text/javascript" src="https://static.lgamestudio.com/general/scripts/loxmessagebox.js"></script>
+		<script type="text/javascript" src="https://static.lgamestudio.com/general/scripts/main.js"></script>
 		<script type="text/javascript" src="./js/custom.js"></script>
 	</body>
 </html>
