--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -34,6 +34,7 @@
 				</div>
 				<select class="selectpicker lpicker" id="loxlanguagesystem-picker" data-style="btn-loxpicker" data-width="fit">
 						<option class="loxlanguagesystem-pickeritem" loxlang="en" data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
+						<option class="loxlanguagesystem-pickeritem" loxlang="de" data-content='<span class="flag-icon flag-icon-de"></span> Deutsch'>German</option>
 						<option class="loxlanguagesystem-pickeritem" loxlang="tr" data-content='<span class="flag-icon flag-icon-tr"></span> Türkçe'>Turkish</option>
 				</select>
 			</header>
