--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Lox Game Studio</title>
+		<title>Lox Game Studio Support</title>
 		<meta charset="utf-16"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-16">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<meta name="description" content="Need help? We are looking forward to helping you.">
 		<meta name="keywords" content="Lox Security Bot, Lox Game Studio, Bot, Discord Bot, bot, discord bot, lox bot, Lox Bot, Lox Discord Bots, lox discord bots">
-		<meta property="og:title" content="Lox Game Studio" />
+		<meta property="og:title" content="Lox Game Studio Support" />
+	  	<meta property="og:type" content="website" />
+	  	<meta property="og:site_name" content="Lox Game Studio Support" /
 		<meta property="og:description" content="Need help? We are looking forward to helping you." />
 		<meta property="og:image" content="https://static.lgamestudio.com/loxbotpages.png" />
 		<meta property="og:url" content="https://support.lgamestudio.com/bots/492021132938182658" />
