--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -32,6 +32,7 @@
 						<li class=""><img border="0" onclick="location.href = 'https://www.lgamestudio.com';" src="https://static.lgamestudio.com/general/img/loxgamestudio.png"/></li>
 						<li class="col-lg-2  col-xs-2"><a href="https://www.lgamestudio.com" target="_blank" class="loxtokens" ltoken="backtolox">&lt; Lox Game Studio</a></li>
 						<li class="col-lg-2 col-xs-2"><a href="https://discord.gg/nJdmnK6" target="_blank" class="loxtokens" ltoken="joinsupportg">jsg</a></li>
+						<li class="col-lg-2 col-xs-2"><a href="https://docs.lgamestudio.com/apis/suspiciousdomainchecker/" target="_blank">Lox API</a></li>
 					</ul>
 				</div>
 				<select class="selectpicker lpicker" id="loxlanguagesystem-picker" data-style="btn-loxpicker" data-width="fit">
