--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Lox Game Studio</title>
 		<meta charset="utf-16"/>
+		<meta http-equiv="refresh" content="0; url=https://support.lgamestudio.com/bots/492021132938182658/index.html" />
 	</head>
 	<body>
 		<h3>You entered a wrong or missing URL. Please check the URL and try again.</h3>
