--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -14,6 +14,14 @@
 		<meta property="og:description" content="Need help? We are looking forward to helping you." />
 		<meta property="og:image" content="https://static.lgamestudio.com/loxbotpages.png" />
 		<meta property="og:url" content="https://support.lgamestudio.com/bots/492021132938182658" />
+		
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8398856923277848",
+    enable_page_level_ads: true
+  });
+</script>
 
 		<link rel="icon" href="https://static.lgamestudio.com/general/favicon.ico" type="image/x-icon"/>
 		<link href="https://static.lgamestudio.com/general/css/bootstrap.min.css" rel="stylesheet">
