--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -35,6 +35,11 @@
 		<div class="lnotifier-container" id="ilnotifier-container"><div class="lnotifier" id="ilnotifier"><h1 class="title" id="lxititle"></h1></br><p class="message" id="lximessage"></p></br><div class="lbuttons"><button class="lbtn lbtnCancel" id="ilbtn-cancel"></button><button class="lbtn lbtnOk" id="ilbtn-ok"></button></div></div></div>
 		<div class="site-container" id="isite-container">
 			<header>
+				<div class="lox-patreon" id="ilox-patreon">
+					<img class="patreonlogo" onclick="openPatreonPage();" src="./images/patreon.png"/>
+					<p class="patreon-msg loxtokens" ltoken="patreonmsg">If you love one of our services, games, APIS, libraries or bots, please don't forget to support for more features.</p>
+					<img class="patreonbutton" onclick="openPatreonPage();" src="./images/become_a_patron_button.png"/>
+				</div>
 				<div class="menu">
 					<ul>
 						<li class=""><img border="0" onclick="location.href = 'https://www.lgamestudio.com';" src="https://static.lgamestudio.com/general/img/loxgamestudio.png"/></li>
