--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -75,6 +75,9 @@
 						<h3 class="lx-panel-h3 loxtokens" ltoken="wilsb01"></h3>
 						<p class="lx-panel-p loxtokens" ltoken="wilsb01_02"></p>
 						<img class="lx-panel-img lxdiagram" src="./images/diagram.png" />
+						<h3 class="lx-panel-h3 loxtokens" ltoken="donateus"></h3>
+						<p class="lx-panel-p loxtokens" ltoken="patreonmsg"></p>
+						<img class="patreon-button2" onclick="openPatreonPage();" src="./images/become_a_patron_button.png"/>
 					</div>
 					<div class="tab-pane lox-tabpanel" id="2">
 						<h3 class="lx-panel-h3 loxtokens" ltoken="htsu01_01"></h3>
