--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -216,7 +216,7 @@
 					</div>
 					<h3 class="lx-panel-h3 join-us loxtokens" ltoken="joinus"></h3>
 					<p class="join-us-txt loxtokens" ltoken="joinustxt"></p>
-					<iframe src="https://discordapp.com/widget?id=346431783333658624&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+					<div class="DiscordWidgetContainer loxtokens" ltoken="discordwidget"></div>
 				</div>
 			<div class="Right">
 			</div>
