--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -150,6 +150,12 @@
 							      <td class="loxtokens" ltoken="cmdadsonusername"></td>
 							      <td class="loxtokens" ltoken="cmdadsonusernameperms"></td>
 							    </tr>
+							    <tr>
+							      <th scope="row">8</th>
+							      <td>detectspam</td>
+							      <td class="loxtokens" ltoken="cmdspam"></td>
+							      <td class="loxtokens" ltoken="cmdspamperms"></td>
+							    </tr>
 							  </tbody>
 							</table>
 							<h3 class="lx-panel-h3 loxtokens" ltoken="cmdsext"></h3>
@@ -196,6 +202,11 @@
 							      <th scope="row">7</th>
 							      <td>detectadsonusername</td>
 							      <td class="loxtokens" ltoken="cmdadsonusernamesamp"></td>
+							    </tr>
+							    <tr>
+							      <th scope="row">8</th>
+							      <td>detectspam</td>
+							      <td class="loxtokens" ltoken="cmdspamsamp"></td>
 							    </tr>
 							  </tbody>
 							</table>
