--- a/bots/492021132938182658/index.html
+++ b/bots/492021132938182658/index.html
@@ -1,1 +1,11 @@
-https://www.loxgamestudio.com/bots/securitybot/en/
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Lox Game Studio</title>
+		<meta charset="utf-16"/>
+		<meta http-equiv="refresh" content="0; url=https://www.loxgamestudio.com/bots/securitybot/en" />
+	</head>
+	<body>
+		<h3>You entered a wrong or missing URL. Please check the URL and try again.</h3>
+	</body>
+</html>
